fix(WorkflowMenu): Align list item text

--- a/src/components/core/WorkflowMenu/style.css
+++ b/src/components/core/WorkflowMenu/style.css
@@ -13,20 +13,25 @@
 }
 
 /* override vuetify */
-.group :global(.list__group__header__prepend-icon) {
+.group :global(.v-list__group__header__prepend-icon) {
   padding: 0;
   min-width: 0;
 }
 
-.group :global(.list__tile) {
+/* override vuetify */
+.group :global(.v-list__tile) {
+  /* line up list text */
   padding-left: 32px;
 }
 
-.listItem {
-  cursor: pointer;
-  max-width: 30vw;
-  padding-top: 2px 0;
-  user-select: none;
+/* match vuetify's .v-list__group:after styles */
+.group:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: rgba(0, 0, 0, 0.12);
 }
 
 .listRow {
